# friendly-hex

./: README.md  flake.nix  pyproject.toml
fhex/: __main__.py  parse.py  words.py
