[tool.poetry]
name = "fhex"
version = "0.1.0"
description = ""
authors = ["Tim Van Baak <tim.vanbaak@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.dev-dependencies]

[tool.poetry.scripts]
friendly-hex = "fhex.__main__:main"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
